<resources>
    <!-- Activity labels -->
    <string name="encrypting_identity_label">SQRL | Encrypting Identity</string>
    <string name="confirm_site_name_label">SQRL | Confirm Site Name</string>
    <string name="create_new_identity_label">SQRL | Create New Identity</string>
    <string name="enter_new_password_label">SQRL | Enter New Password</string>
    <string name="enter_password_label">SQRL | Enter Password</string>
    <string name="login_label">SQRL | Authenticating</string>
    <string name="main_label">SQRL | Main Menu</string>
    <string name="no_identity_label">SQRL | No Identity</string>

    <string name="app_name">SQRL</string>
    <string name="login_on_this_device">You can login to a site on this device by tapping on the QR code in the browser.</string>
    <string name="invalid_link">The link was not valid.</string>
    <string name="confirm_site_name">Confirm</string>
    <string name="incorrect_site_name">This is not the right site</string>
    <string name="cannot_display_buttons">Could not display the confirm/deny site buttons.</string>
    <string name="account_exists">The account already exists.</string>
    <string name="account_does_not_exist">The account does not yet exist.</string>
    <string name="something_went_wrong">Something went wrong.</string>
    <string name="contacting_server">Contacting server...</string>
    <string name="transient_error">A transient error occurred. The sender should resend the request using the new nut and qry values.</string>
    <string name="unknown_scheme">The uri scheme %s is not supported.</string>
    <string name="no_nut">The required nut parameter was not present.</string>
    <string name="enable_test_mode">You must enable test mode before calling await.</string>
    <string name="identity_signature_failed">Could not sign the message using the identities private key.</string>
    <string name="tif_value_not_hexadecimal">\"tif\" value in server response was not hexadecimal.</string>
    <string name="unknown_error">An unknown error occurred.</string>
    <string name="query_function_not_supported">Query function is not supported by server.</string>
    <string name="client_failure">According to the server, something about the request was incorrect.</string>
    <string name="bad_id_association">A \"bad id association\" error occurred. Perhaps the wrong SQRL Identity was used?</string>
    <string name="server_response_missing_parameter">The \"%s\" parameter was not present in server response.</string>
    <string name="invalid_server_response">Servers response was in an unrecognised format.</string>
    <string name="non_200_response_code">The status code of the servers response was %d instead of 200.</string>
    <string name="dialog_create_account">Would you like to create an account?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="authorisation_request_failed">Authorisation request failed.</string>
    <string name="authorisation_request_sent">Authorisation request sent.</string>
    <string name="scan_qr">Scan QR</string>
    <string name="login">Login</string>
    <string name="create_new_identity">Create New Identity</string>
    <string name="create_new_identity_explanation">To make sure your new identity is as secure as possible, shake the camera and wave it as many different things as possible until the bar turns green. For extra security, keep shaking and waving the camera after the bar has turned green, the longer the better.</string>
    <string name="camera_service_not_supported">The camera service is not supported by this system.</string>
    <string name="no_cameras">There are no available cameras.</string>
    <string name="camera_permission_not_granted">This app requires permission to use the camera! Please enable it in the phones settings.</string>
    <string name="camera_disconnected">The camera is no longer available for use.</string>
    <string name="camera_error_occurred">An error occurred whilst trying to open the camera.</string>
    <string name="camera_configuration_failed">The camera configuration failed.</string>
    <string name="raw_unsupported">The raw image format is not supported by the given camera.</string>
    <string name="create">Create</string>
    <string name="identity_already_exists">An identity with this name already exists.</string>
    <string name="identities_could_not_be_loaded">The identities could not be loaded from disk.</string>
    <string name="identity_could_not_be_written_to_disk">The identity could not be written to disk.</string>
    <string name="identity">Identity:</string>
    <string name="delete_identity">Delete Identity</string>
    <string name="identity_deleted">The identity has been successfully deleted.</string>
    <string name="identity_does_not_exist">The identity \"%s\" does not exist.</string>
    <string name="identity_could_not_be_deleted">The identity \"%s\" could not be deleted.</string>
    <string name="no_identity_explanation">You must create an identity in order to use this application. Your identity will be used to log in to websites, and will not take long to create.</string>
    <string name="invalid_master_key">The provided master key was invalid.</string>
    <string name="key_generation_failed">A failure occurred while trying to generate the SQRL keypair.</string>
    <string name="next">Next</string>
    <string name="enter_new_password_explanation">Please enter the password you would like to use to protect your identity. It needs to be as strong as possible to protect against bad guys, so make it as long and random as you can! You will need to enter it every time you login to a site.</string>
    <string name="password_hint">Enter password...</string>
    <string name="second_password_hint">Enter password again...</string>
    <string name="password_contains_null">The password contained a NUL character, illegal for use with SQRL.</string>
    <string name="enter_password_help">Enter the password for the selected identity.</string>
    <string name="verifying_password">Verifying password...</string>
    <string name="password_is_blank">You didn\'t give me a password!</string>
    <string name="incorrect_password">That password was incorrect!</string>
    <string name="encrypting_identity_explanation">In order to protect your identity against people who might steal your device, it needs to be encrypted using your password for 5 seconds.</string>
    <string name="bad_base_64">The response contained bad base64.</string>
    <string name="done">Done</string>
    <string name="new_identity_name_hint">Type your new identity name here...</string>
</resources>
