<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".NoIdentityActivity"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/ExplanationTextView"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:text="@string/enter_new_password_explanation"
        />

    <EditText
        android:id="@+id/PasswordEditText"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:layout_below="@id/ExplanationTextView"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        />
    
    <EditText
        android:id="@+id/SecondPasswordEditText"
        android:hint="@string/second_password_hint"
        android:inputType="textPassword"
        android:layout_below="@id/PasswordEditText"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        />

    <ProgressBar
        android:id="@+id/PasswordStrengthMeter"
        android:layout_below="@id/SecondPasswordEditText"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:progress="0"
        android:progressDrawable="@drawable/green_progress_bar"
        style="@android:style/Widget.ProgressBar.Horizontal"
        />
    
    <Button
        android:enabled="false"
        android:id="@+id/NextButton"
        android:layout_below="@id/PasswordStrengthMeter"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:onClick="onNextClicked"
        android:text="@string/next"
        />

</RelativeLayout>
