<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <LinearLayout
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:text="@string/identity"
            android:textColor="@color/primaryText"
            android:textSize="@dimen/identity_selector_text_size"
            />

        <io.barnabycolby.sqrlclient.views.IdentitySpinner
            android:id="@+id/IdentitySpinner"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            />

    </LinearLayout>

    <TableLayout
        android:layout_centerInParent="true"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        >

        <TableRow
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            >
            <Button
                android:id="@+id/LoginButton"
                android:layout_centerHorizontal="true"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:onClick="login"
                android:text="@string/login"
                />
        </TableRow>

        <TableRow
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginTop="15dp"
            >
            <Button
                android:id="@+id/CreateNewIdentityButton"
                android:layout_below="@id/LoginButton"
                android:layout_centerHorizontal="true"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:onClick="createNewIdentity"
                android:text="@string/create_new_identity"
                />
        </TableRow>

        <TableRow
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            >
            <Button
                android:id="@+id/DeleteIdentityButton"
                android:layout_below="@id/CreateNewIdentityButton"
                android:layout_centerHorizontal="true"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:onClick="deleteIdentity"
                android:text="@string/delete_identity"
                />
        </TableRow>
    </TableLayout>

    <LinearLayout
        android:gravity="bottom"
        android:layout_centerHorizontal="true"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        >
        <TextView
            android:gravity="center"
            android:id="@+id/LoginOnDeviceTextView"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/login_on_this_device"
            />
    </LinearLayout>

</RelativeLayout>
