<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".NoIdentityActivity"
    android:orientation="vertical" >

    <Spinner
        android:id="@+id/IdentitySpinner"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        />

    <EditText
        android:id="@+id/PasswordEditText"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:layout_below="@id/IdentitySpinner"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        />
    
    <ProgressBar
        android:id="@+id/VerifyProgressBar"
        android:layout_below="@id/PasswordEditText"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:progress="0"
        android:progressDrawable="@drawable/green_progress_bar"
        android:visibility="gone"
        style="@android:style/Widget.ProgressBar.Horizontal"
        />

    <TextView
        android:id="@+id/InformationTextView"
        android:layout_below="@id/VerifyProgressBar"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/enter_password_help"
        />
    
    <Button
        android:enabled="false"
        android:id="@+id/LoginButton"
        android:layout_below="@id/InformationTextView"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/login"
        />

</RelativeLayout>
