<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".CreateNewIdentityActivity">

    <RelativeLayout
        android:layout_centerInParent="true"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        >

        <RelativeLayout
            android:id="@+id/MainContent"
            android:layout_centerInParent="true"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            >

            <EditText
                android:id="@+id/IdentityNameEditText"
                android:layout_height="wrap_content"
                android:layout_width="fill_parent"
                android:singleLine="true"
                />

            <TextView
                android:id="@+id/CreateNewIdentityExplanationTextView"
                android:layout_below="@id/IdentityNameEditText"
                android:layout_centerHorizontal="true"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/create_new_identity_explanation"
                />

            <RelativeLayout
                android:id="@+id/ProgressBarAndCreateButton"
                android:layout_below="@id/CreateNewIdentityExplanationTextView"
                android:layout_height="wrap_content"
                android:layout_width="fill_parent"
                >
                <ProgressBar
                    android:id="@+id/EntropyHarvesterProgressBar"
                    android:layout_centerHorizontal="true"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/activity_vertical_separate_margin"
                    android:layout_marginTop="@dimen/activity_vertical_separate_margin"
                    android:layout_width="fill_parent"
                    android:progress="0"
                    android:progressDrawable="@drawable/green_progress_bar"
                    style="@android:style/Widget.ProgressBar.Horizontal"
                    />

                <Button
                    android:id="@+id/CreateNewIdentityButton"
                    android:layout_centerHorizontal="true"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_width="wrap_content"
                    android:text="@string/create"
                    android:visibility="gone"
                    />
            </RelativeLayout>

            <TextureView
                android:id="@+id/CameraPreview"
                android:layout_below="@id/ProgressBarAndCreateButton"
                android:layout_centerHorizontal="true"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                />

        </RelativeLayout>

        <TextView
            android:id="@+id/ErrorTextView"
            android:layout_centerHorizontal="true"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/unknown_error"
            android:visibility="gone"
            />

    </RelativeLayout>

</RelativeLayout>
